--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "joi": "^14.3.1",
     "jsonwebtoken": "8.2.1",
     "mysql2": "^1.6.5",
+    "object-formatter": "1.0.2",
     "pg": "^7.11.0",
     "pg-hstore": "^2.3.2",
     "sequelize": "4.37.6",
